--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,21 @@
 /* Add CSS Styling */
+
+.odd-number { 
+    background-color: pink;
+    font-family: Verdana, Dejavu Sans, sans-serif;
+}
+
+#num-2 {
+    color: blue;
+    font-size: 36px;
+}
+
+#num-3 { 
+    font-size: 24px;
+}
+
+#num-4 { 
+    background-color: lightgreen;
+    font-size:  24px;
+    font-weight: bold;
+}
